# 2025-oct-20-hackathon-qualcomm

./: .gitattributes  .gitignore  .gitmodules  HOWTO.md  PRODUCT_REQUIREMENT_DOCUMENT.md  README.md  gradle.properties  gradlew  pyproject.toml  settings.gradle.kts  terraform_executorch_pyenv.sh
DreamSpark/: settings.gradle.kts
DreamSpark/app/: build.gradle.kts
DreamSpark/app/src/androidTest/java/com/farv/dreamspark/: ExampleInstrumentedTest.kt
DreamSpark/app/src/main/: AndroidManifest.xml
DreamSpark/app/src/main/java/com/farv/dreamspark/: DreamSparkApplication.kt  MainActivity.kt
DreamSpark/app/src/main/res/values/: strings.xml  themes.xml
DreamSpark/app/src/test/java/com/farv/dreamspark/: ExampleUnitTest.kt
DreamSpark/gradle/wrapper/: gradle-wrapper.properties
app/: README.md  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  executorch_wrapper.cpp  jni_bindings.cpp
app/src/main/java/com/tinystories/: TinyStoriesApplication.kt
app/src/main/java/com/tinystories/di/: AppModule.kt
app/src/main/java/com/tinystories/domain/model/: GenerationState.kt  Story.kt
app/src/main/java/com/tinystories/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
assets/models/LLama3.2-1B/: llama3_2.pte
gradle/wrapper/: README.md
notebooks/: model-llama3.2-1B.ipynb  whisper.ipynb
(+21 files in other folders)
