[project]
name = "2025-oct-20-hackathon-qualcomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "executorch>=0.7.0",
    "ipykernel>=7.0.1",
    "pytorch-tokenizers",
    "torch>=2.8.0",
]

[tool.uv.workspace]
members = [
    "third_party/executorch/extension/llm/tokenizers",
]

[tool.uv.sources]
pytorch-tokenizers = { workspace = true }
